--- a/content/resources/icas2004_7_8_1.md
+++ b/content/resources/icas2004_7_8_1.md
@@ -2,8 +2,12 @@
 content_type: resource
 description: The unique pedagogy of this course is explained and assessed in this
   paper authored by the course instructors.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/16-886-air-transportation-systems-architecting-spring-2004/c9727a60d8812736a1e997844e172584_icas2004_7_8_1.pdf
+file: /media/courses/16-886-air-transportation-systems-architecting-spring-2004/c9727a60d8812736a1e997844e172584_icas2004_7_8_1.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Course Pedagogy
+parent_type: CourseSection
 resourcetype: Document
 title: icas2004_7_8_1.pdf
 uid: c9727a60-d881-2736-a1e9-97844e172584
