--- a/content/resources/icas2004_7_8_1.md
+++ b/content/resources/icas2004_7_8_1.md
@@ -8,6 +8,7 @@ learning_resource_types: []
 ocw_type: OCWFile
 parent_title: Course Pedagogy
 parent_type: CourseSection
+parent_uid: d7ea852d-2163-7a43-25fb-b3dbfb1874ae
 resourcetype: Document
 title: icas2004_7_8_1.pdf
 uid: c9727a60-d881-2736-a1e9-97844e172584
