--- a/content/resources/16-888s04-th.md
+++ b/content/resources/16-888s04-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/16-886-air-transportation-systems-architecting-spring-2004/88cfa9641970309cf58bbb79023399a3_16-888s04-th.jpg
+file: /courses/16-886-air-transportation-systems-architecting-spring-2004/88cfa9641970309cf58bbb79023399a3_16-888s04-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Curtiss F9C-2 "Sparrowhawk" fighters, flying in a "V" formation, circa
@@ -14,3 +14,5 @@ resourcetype: Image
 title: 16-888s04-th.jpg
 uid: 88cfa964-1970-309c-f58b-bb79023399a3
 ---
+New image Upload
+
