--- a/content/resources/16-888s04.md
+++ b/content/resources/16-888s04.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Curtiss F9C-2 "Sparrowhawk" fighters, flying in a "V" formation, circa
   1933-1935. (Image courtesy of the U.S. Naval Historical Center.)
-file: /media/courses/16-886-air-transportation-systems-architecting-spring-2004/189e920b482a297276c4462add95d292_16-888s04.jpg
+file: /courses/16-886-air-transportation-systems-architecting-spring-2004/189e920b482a297276c4462add95d292_16-888s04.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Curtiss F9C-2 "Sparrowhawk" fighters, flying in a "V" formation, circa
@@ -15,3 +15,5 @@ resourcetype: Image
 title: 16-888s04.jpg
 uid: 189e920b-482a-2972-76c4-462add95d292
 ---
+Curtiss F9C-2 "Sparrowhawk" fighters, flying in a "V" formation, circa 1933-1935. (Image courtesy of the U.S. Naval Historical Center.)
+
