--- a/content/resources/icas2004_7_8_1.md
+++ b/content/resources/icas2004_7_8_1.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: The unique pedagogy of this course is explained and assessed in this
   paper authored by the course instructors.
-file: /media/courses/16-886-air-transportation-systems-architecting-spring-2004/c9727a60d8812736a1e997844e172584_icas2004_7_8_1.pdf
+file: /courses/16-886-air-transportation-systems-architecting-spring-2004/c9727a60d8812736a1e997844e172584_icas2004_7_8_1.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -13,3 +13,5 @@ resourcetype: Document
 title: icas2004_7_8_1.pdf
 uid: c9727a60-d881-2736-a1e9-97844e172584
 ---
+The unique pedagogy of this course is explained and assessed in this paper authored by the course instructors.
+
