Sync all content

--- a/content/resources/16-888s04.md
+++ b/content/resources/16-888s04.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Three Curtiss F9C-2 'Sparrowhawk' fighters flying in formation.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 16-888s04.jpg
 uid: 189e920b-482a-2972-76c4-462add95d292
 ---
 Curtiss F9C-2 "Sparrowhawk" fighters, flying in a "V" formation, circa 1933-1935. (Image courtesy of the U.S. Naval Historical Center.)
-
