--- a/content/resources/16-888s04-th.md
+++ b/content/resources/16-888s04-th.md
@@ -9,10 +9,10 @@ image_metadata:
   credit: ''
   image-alt: Three Curtiss F9C-2 'Sparrowhawk' fighters flying in formation.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 16-888s04-th.jpg
 uid: 88cfa964-1970-309c-f58b-bb79023399a3
 ---
 New image Upload
-
