--- a/content/resources/icas2004_7_8_1.md
+++ b/content/resources/icas2004_7_8_1.md
@@ -5,6 +5,7 @@ description: The unique pedagogy of this course is explained and assessed in thi
 file: /courses/16-886-air-transportation-systems-architecting-spring-2004/c9727a60d8812736a1e997844e172584_icas2004_7_8_1.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Course Pedagogy
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: icas2004_7_8_1.pdf
 uid: c9727a60-d881-2736-a1e9-97844e172584
 ---
 The unique pedagogy of this course is explained and assessed in this paper authored by the course instructors.
-
