--- a/content/resources/16-888s04-th.md
+++ b/content/resources/16-888s04-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/16-886-air-transportation-systems-architecting-spring-2004/88cfa9641970309cf58bbb79023399a3_16-888s04-th.jpg
+file_size: 7716
 file_type: image/jpeg
 image_metadata:
   caption: Curtiss F9C-2 "Sparrowhawk" fighters, flying in a "V" formation, circa
