--- a/content/resources/icas2004_7_8_1.md
+++ b/content/resources/icas2004_7_8_1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: The unique pedagogy of this course is explained and assessed in this
   paper authored by the course instructors.
 file: /courses/16-886-air-transportation-systems-architecting-spring-2004/c9727a60d8812736a1e997844e172584_icas2004_7_8_1.pdf
+file_size: 121006
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
